--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body,html{
-    margin 0;
+    margin: 0;
     background-color: antiquewhite;
 
 }
@@ -25,4 +25,7 @@ body,html{
  #registrationform{
     display: flex;
     flex-direction: column;
+ }
+ footer>a{
+  text-decoration: none;
  }
